trunk/Archive2/ef/ca727df9863435/output
main.cpp:12:11: error: non-const lvalue reference to type 'int' cannot bind to a temporary of type 'int'
    auto& v = foo();
          ^   ~~~~~
1 error generated.
